Fix issue with padding overflow on Socials

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,6 @@
   font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
-  line-height: 1.65;
 }
 
 .full-screen {
@@ -25,6 +24,7 @@ h2 {
   color: #191c1f;
   font-size: 2rem;
   font-weight: 500;
+  line-height: 1.65;
 }
 
 h3 {
@@ -33,6 +33,7 @@ h3 {
   font-size: 1rem;
   font-weight: 500;
   margin-top: 1.8rem;
+  line-height: 1.65;
 }
 
 h4 {
@@ -47,6 +48,7 @@ p {
   color: #8b959e;
   font-size: 1rem;
   font-weight: 400;
+  line-height: 1.65;
 }
 
 @media only screen and (max-width: 1023px) {
